test/captureInLoop2.slq
def foo(){
	r:=0:ğ”¹;
	def bar(const xs:ğ”¹^2){
		for i in 0..2{
			r&=xs[i]; /// error
		}
	}
}
